--- a/main.html
+++ b/main.html
@@ -8,6 +8,30 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+	<label for="name">Name</label>
+	<input type="text" id="name" placeholder="Name" required>
+	<label for="email">Email</label>
+	<input type="email" id="email" placeholder="Email" required>
+	<label for="gender" >Gender</label>
+	<input type="radio" id="gender_m" required name="gender">
+	<input type="radio" id="gender_f" required name="gender">
+	<label for="cars">Car Brands</label>
+	<select id="cars" >
+		<option value="" selected>--Please choose an option--</option>
+	</select>
+	<label for="age">Age</label>
+	<input type="number" id="age" placeholder="Age" required>
+	<label for="dob">DOB</label>
+	<input type="date" id="dob"  required>
+	<label for="tel">Phone Number</label>
+	<input type="tel" id="tel" placeholder="xxx-xxx-xxxx" >
+	<label for="password">Password</label>
+	<input type="password" id="password" placeholder="Password" required>
+	<label for="tos">I agree to the TOS</label>
+	<input type="checkbox" id="tos" required>
+	<button type="submit">Submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
